# HPMC

./: .gitignore  README.md
hands-on/: CMakeLists.txt
hands-on/1/: CMakeLists.txt  getMemSize.c
hands-on/2/: CMakeLists.txt  SpMV.c
hands-on/SparseMatrix/: CMakeLists.txt  SparseMatrix.h  cmp.c  coo.c  csr.c  dense.c  dense.h  dia.c  dia.h  ell.c  loadmm.c  loadmm.h
homework/2/tasks/.ipynb_checkpoints/: PageRank-checkpoint.ipynb
module1/tasks/: CMakeLists.txt
module1/tasks/SparseMatrix/: CMakeLists.txt  SparseMatrix.h  cmp.h  coo.c  coo.h  csr.c  csr.h  dense.c  dense.h  dia.c  dia.h  ell.c  ell.h
module1/tasks/bonus/: CMakeLists.txt  cusparse_spmv_coo.c
module1/tasks/hands-on/: getMemSize.c
module1/tasks/homework-1/: CMakeLists.txt  SpMV.c  SpMV_dev.c
module1/tasks/homework-2/: CMakeLists.txt  mkl_spmv_coo.c  mkl_spmv_csr.c
module1/tasks/homework-3/: cusparse_spmv_csr.c
module2/tasks/homework-1/: LinearSolver.ipynb
module2/tasks/homework-1/tasks/: LinearSolver.ipynb
module2/tasks/homework-2/: PageRank.ipynb
module2/tasks/homework-2/tasks/: PageRank.ipynb
